crates/plotnik-compiler/src/compile/snapshots/plotnik_compiler__compile__compile_tests__compile_alternation.snap
---
source: crates/plotnik-compiler/src/compile/compile_tests.rs
---
Test = [(identifier) (number)]
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "identifier"
S3 "number"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [ObjectOpen]                     02
  02       Trampoline                       03
  03  -ε-  [ObjectClose]                    05
  05                                        ▶

Test:
  06  -ε-                                   09, 10
  08                                        ▶
  09   !   (identifier)                     08
  10   !   (number)                         08
