crates/plotnik-compiler/src/compile/snapshots/plotnik_compiler__compile__compile_tests__compile_optional_struct_capture_split_exits.snap
---
source: crates/plotnik-compiler/src/compile/compile_tests.rs
---
Test = (program {(identifier) @id}? @outer)
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "outer"
S3 "Test"
S4 "program"
S5 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { outer }
T3 = Optional(T0)  ; <Node>?
T4 = Optional(T1)  ; T1?

[type_members]
M0: S1 → T3  ; id: T3
M1: S2 → T4  ; outer: T4

[type_names]
N0: S3 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00  -ε-  [ObjectOpen]                     02
  02       Trampoline                       03
  03  -ε-  [ObjectClose]                    05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08  -ε-  [ObjectOpen]                     22, 18
  10   !   (identifier) [Node Set(M0)]      12
  12  ─‣┘  [ObjectClose Set(M1)] _          14
  14                                        ▶
  15  ...  
  16  -ε-  [ObjectClose Set(M1)]            14
  18  -ε-  [Null Set(M0)]                   16
  20  ─‣─  _                                10, 20
  22  └‣─  _                                10, 20
