crates/plotnik-compiler/src/compile/snapshots/plotnik_compiler__compile__compile_tests__compile_optional_suppressed_capture_split_exits.snap
---
source: crates/plotnik-compiler/src/compile/compile_tests.rs
---
Test = (program {(identifier) @id}? @_)
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "Test"
S3 "program"
S4 "identifier"

[type_defs]
T0 = <Void>
T1 = <Node>
T2 = Struct  M0:1  ; { id }
T3 = Struct  M1:1  ; { id }
T4 = Optional(T1)  ; <Node>?

[type_members]
M0: S1 → T1  ; id: <Node>
M1: S1 → T4  ; id: T4

[type_names]
N0: S2 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08  -ε-  [SuppressBegin]                  20, 16
  10   !   (identifier) [Node]              12
  12  ─‣┘  [SuppressEnd] _                  14
  14                                        ▶
  15  ...  
  16  -ε-  [SuppressEnd]                    14
  18  ─‣─  _                                10, 18
  20  └‣─  _                                10, 18
