crates/plotnik-compiler/src/compile/snapshots/plotnik_compiler__compile__compile_tests__compile_sequence.snap
---
source: crates/plotnik-compiler/src/compile/compile_tests.rs
---
Test = {(comment) (identifier)}
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "comment"
S3 "identifier"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 6 :: T0

[transitions]
_StructWrap:
  0  -ε-  [StructOpen]                      2
  2       Trampoline                        3
  3  -ε-  [StructClose]                     5
  5                                         ▶

Test:
  6   !   (comment)                         7
  7  ─‣─  (identifier)                      8
  8                                         ▶
